--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
+  
   "name": "dockerbasics",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Running tests...\" && exit 0",
+    "start": "node app.js" 
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.1"
-  }
+
+"keywords": [],
+"author": "",
+"license": "ISC",
+"description": "",
+"dependencies": {
+  "express": "^4.21.1"
+}
 }
